# cosmos-desktop

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  vitest.config.ts
.claude/: settings.local.json
.claude/agents/: backend.md  frontend.md  planner.md  qa.md
docs/: ARCHITECTURE.md  M2_ENTER_CRITERIA.md  NEXT_SESSION.md  PLAN.md  PLAN_M2.md  PLAN_M3.md  PLAN_M4.md  PLAN_M5.md  PLAN_M6.md  PLAN_M7.md  PLAN_M8.md  RETROSPECTIVE.md  STATUS.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ipc_types.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  node_details.rs  nodes.rs  scanner.rs
src-tauri/src/db/: mod.rs
src-tauri/src/safety/: mod.rs  path.rs
src-tauri/src/scanner/: coords.rs  mod.rs
src/canvas/: AutoFit.test.ts  AutoFit.ts  CameraAnimator.test.ts  CameraAnimator.ts  CameraController.test.ts  CameraController.ts  Scene.test.ts  Scene.ts  projection.test.ts  projection.ts  search.test.ts  search.ts
src/canvas/nodes/: InstancedNodes.test.ts  InstancedNodes.ts
src/canvas/picking/: GPUPicker.test.ts  GPUPicker.ts
src/ipc/: getNodes.ts
src/lib/: bindings.ts
src/state/: bridge.test.ts  bridge.ts  nodeBuffer.test.ts  nodeBuffer.ts  nodeChunkSync.test.ts  nodeChunkSync.ts  nodeDetailsSync.test.ts  nodeDetailsSync.ts  store.test.ts  store.ts
src/ui/: App.css  App.tsx  HomeButton.tsx  HoverTooltip.tsx  NodeDetailsPanel.tsx  ScanControl.tsx  SearchOverlay.tsx  nodeDetailsFormat.test.ts  nodeDetailsFormat.ts  scanControlHelpers.test.ts  scanControlHelpers.ts
