[package]
name = "cosmos-desktop"
version = "0.1.0"
description = "무한 줌 3D 우주 캔버스 파일 탐색기"
authors = ["cosmos-desktop contributors"]
edition = "2021"
# 기본 실행 바이너리 명시. src/bin/gen_bindings.rs 추가(M5 Step 1) 이후
# `cargo run` / `tauri dev` 가 어느 바이너리를 실행할지 모호해져 빌드가 실패한다.
# gen_bindings 는 별도 바이너리이므로 `cargo run --bin gen_bindings` 로 명시 호출.
default-run = "cosmos-desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cosmos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# SQL 플러그인: SQLite 지속성 관리 (마이그레이션, 쿼리 실행)
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 에러 핸들링: Rust 에러를 사용자 메시지로 변환할 때 사용
thiserror = "1"
# 비동기 런타임: Tauri 내부에도 포함되지만 명시적으로 depend
tokio = { version = "1", features = ["full"] }
# 타입 세이프 IPC: Rust 타입/커맨드를 TypeScript bindings로 자동 생성
# (M5 Step 1) Gemini Pro 권장. specta는 Rust 타입을 다른 언어로 export하는 코어,
# specta-typescript는 TS export 백엔드, tauri-specta는 #[tauri::command]를 묶어서
# 타입 세이프 클라이언트 함수를 함께 생성. 2026-04 현재 v2.0.0-rc.24가 최신 stable.
specta = "=2.0.0-rc.24"
specta-typescript = "0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
# (M6-1 Step 1) FS 스캐너 의존성
# - dirs: OS 별 홈 디렉토리 경로 처리 (Windows %USERPROFILE%, macOS/Linux $HOME)
# - uuid v7: 시간 기반 정렬 가능한 ID. Step 2 청크 스트리밍에서 노드 식별자로 사용.
#   v7은 "절반 timestamp + 절반 random" 구조라, 청크 도착 순서대로 자연 정렬됨.
dirs = "5"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
# 격리된 임시 디렉토리/파일 생성 (테스트 종료 시 자동 cleanup)
tempfile = "3"

